Same as previous commit.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  </nav>
    
      <a href="/index-Alebia.html">
-    <img src="./assets/img/Alessia Bianchi.png" alt="Logo del sito" class="logo">
+    <img src="assets/img/Alessia Bianchi.png" alt="Logo del sito" class="logo">
     </a> 
 
     <input type="checkbox" id="menu-toggle" class="menu-toggle">
