cv index finito1

--- a/cv/index.html
+++ b/cv/index.html
@@ -31,8 +31,8 @@
 
     <div class="nav-mobile">
       <nav class="nav2">
-        <a href="cv/index.html" class="nav-link text-dark">CV</a>
-        <a href="contattami/index.html" class="nav-link text-dark">Contattami</a>
+        <a href="index.html" class="nav-link text-dark">CV</a>
+        <a href="../contattami/index.html" class="nav-link text-dark">Contattami</a>
 
         <div class="socialburger">
           <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i
@@ -48,7 +48,7 @@
     <div class="social-icons">
       <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
 
@@ -212,7 +212,7 @@
     <div class="social-icons">
       <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
     </div>
   </footer>
 
