Fixed relative file linking.

--- a/contattami/index.html
+++ b/contattami/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <title>Portfolio di Alessia</title>
@@ -18,12 +18,12 @@
 
 
         <nav class="nav">
-            <a href="cv/index.html">CV</a>
-            <a href="contattami/index.html">Contattami</a>
+            <a href="../cv/index.html">CV</a>
+            <a href="index.html">Contattami</a>
         </nav>
 
-        <a href="index.html">
-            <img src="assets/img/Alessia Bianchi.png" alt="Logo del sito" class="logo">
+        <a href="../index.html">
+            <img src="../assets/img/Alessia Bianchi.png" alt="Logo del sito" class="logo">
         </a>
 
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -32,15 +32,15 @@
 
         <div class="nav-mobile">
             <nav class="nav2">
-                <a href="cv/index.html" class="nav-link text-dark">CV</a>
-                <a href="contattami/index.html" class="nav-link text-dark">Contattami</a>
+                <a href="../cv/index.html" class="nav-link text-dark">CV</a>
+                <a href="index.html" class="nav-link text-dark">Contattami</a>
 
                 <div class="socialburger">
                     <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i
                             class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i
                             class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com" target="_blank" class="text-dark me-2"><i
+                    <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i
                             class="fab fa-github"></i></a>
                 </div>
             </nav>
@@ -51,7 +51,7 @@
             <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i
                     class="fab fa-linkedin"></i></a>
-            <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
         </div>
 
 
@@ -94,7 +94,7 @@
             <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i
                     class="fab fa-linkedin"></i></a>
-            <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </footer>
 
