--- a/cv/index.html
+++ b/cv/index.html
@@ -39,7 +39,7 @@
               class="fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i
               class="fab fa-linkedin"></i></a>
-          <a href="https://github.com" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
         </div>
       </nav>
     </div>
@@ -76,7 +76,7 @@
                 href="https://www.linkedin.com/in/alessiabianchi1994/?profileId=ACoAACoHr1wBAj5Zu1xkYQzLgmdW49hs2y-22_4"><i
                   class="fab fa-linkedin"></i> LinkedIn</a></li>
             <li><a href="https://www.instagram.com/alebia23/"><i class="fab fa-instagram"></i> Instagram</a></li>
-            <li><a href="#"><i class="fab fa-github"></i> GitHub</a></li>
+            <li><a href="https://github.com/Alebia"><i class="fab fa-github"></i> GitHub</a></li>
           </ul>
           <h2>Pro Skills</h2>
           <ul>
