--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               class="fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i
               class="fab fa-linkedin"></i></a>
-          <a href="https://github.com" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
         </div>
       </nav>
     </div>
@@ -45,7 +45,7 @@
     <div class="social-icons">
       <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
 
@@ -149,22 +149,22 @@
         <div class="projects">
           <div class="project">
             <a href="#popup10" class="open-popup">
-              <img src="hobby/img/1fotografia.JPG" alt="Anteprima User Interface">
+              <img src="assets/img/hobby/1fotografia.JPG" alt="Anteprima User Interface">
             </a>
           </div>
           <div class="project">
             <a href="#popup11" class="open-popup">
-              <img src="hobby/img/2pittura.JPG" alt="Anteprima User Interface">
+              <img src="assets/img/hobby/2pittura.JPG" alt="Anteprima User Interface">
             </a>
           </div>
           <div class="project">
             <a href="#popup12" class="open-popup">
-              <img src="hobby/img/3escursionismo.JPG" alt="Anteprima User Interface">
+              <img src="assets/img/hobby/3escursionismo.JPG" alt="Anteprima User Interface">
             </a>
           </div>
           <div class="project">
             <a href="#popup13" class="open-popup">
-              <img src="hobby/img/4viaggi.JPG" alt="Anteprima User Interface">
+              <img src="assets/img/hobby/4viaggi.JPG" alt="Anteprima User Interface">
             </a>
           </div>
         </div>
@@ -297,10 +297,10 @@
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
         <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank">
-          <img src="hobby/img/photo.jpg" alt="Progetto 1" class="modal-img">
-          <img src="hobby/img/photo2.jpg" alt="Progetto 1" class="modal-img">
-          <img src="hobby/img/photo3.jpg" alt="Progetto 1" class="modal-img">
-          <img src="hobby/img/photo4.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/photo.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/photo2.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/photo3.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/photo4.jpg" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Da sempre una delle mie passioni più grandi, la fotografia mi accompagna in ogni viaggio e
           momento da ricordare. Per scoprire di più e guardare altri miei lavori clicca sulle foto e verrai indirizzato
@@ -313,10 +313,10 @@
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
         <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank">
-          <img src="hobby/img/disegno.jpg" alt="Progetto 1" class="modal-img">
-          <img src="hobby/img/disegno2.jpg" alt="Progetto 1" class="modal-img">
-          <img src="hobby/img/disegno3.jpg" alt="Progetto 1" class="modal-img">
-          <img src="hobby/img/disegno4.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/disegno.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/disegno2.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/disegno3.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/disegno4.jpg" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Tra i miei hobby preferiti c'è sicuramente la pittura e il disegno, gli acquerelli sono la
           tecnica che più mi rappresenta.</p>
@@ -327,10 +327,10 @@
     <div id="popup12" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <img src="hobby/img/hiking.jpg" alt="Progetto 1" class="modal-img">
-        <img src="hobby/img/hiking2.jpg" alt="Progetto 1" class="modal-img">
-        <img src="hobby/img/hiking3.jpg" alt="Progetto 1" class="modal-img">
-        <img src="hobby/img/hiking4.jpg" alt="Progetto 1" class="modal-img">
+        <img src="assets/img/hobby/hiking.jpg" alt="Progetto 1" class="modal-img">
+        <img src="assets/img/hobby/hiking2.jpg" alt="Progetto 1" class="modal-img">
+        <img src="assets/img/hobby/hiking3.jpg" alt="Progetto 1" class="modal-img">
+        <img src="assets/img/hobby/hiking4.jpg" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Le passeggiate in montagna e i trekking sono il mio appuntamento preferito del weekend.
         </p>
@@ -342,11 +342,11 @@
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
         <a href="https://www.youtube.com/watch?v=OpXRUv5VtVY" target="_blank">
-          <img src="hobby/img/travel.jpg" alt="Progetto 1" class="modal-img">
-          <img src="hobby/img/travel2.jpg" alt="Progetto 1" class="modal-img">
-          <img src="hobby/img/travel3.jpg" alt="Progetto 1" class="modal-img">
-          <img src="hobby/img/travel4.jpg" alt="Progetto 1" class="modal-img">
-          <img src="hobby/img/travel5.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/travel.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/travel2.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/travel3.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/travel4.jpg" alt="Progetto 1" class="modal-img">
+          <img src="assets/img/hobby/travel5.jpg" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Mi piace viaggiare perché mi offre la possibilità di osservare realtà diverse dalla mia,
           di capire come funziona il mondo da altre prospettive e di affrontare sfide che mi spingono a adattarmi e
@@ -361,7 +361,7 @@
     <div class="social-icons">
       <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
     </div>
   </footer>
 
