--- a/cv/index.html
+++ b/cv/index.html
@@ -52,7 +52,6 @@
     </div>
 
 
-
   </header>
 
   <main>
@@ -83,37 +82,30 @@
             <li>DaVinci</li>
             <div class="progress-container">
               <div class="progress-bar" style="width: 80%;"></div>
-              <!-- Imposta la larghezza in base alla percentuale -->
             </div>
             <li>Photoshop</li>
             <div class="progress-container">
               <div class="progress-bar" style="width: 70%;"></div>
-              <!-- Imposta la larghezza in base alla percentuale -->
             </div>
             <li>Premiere Pro</li>
             <div class="progress-container">
               <div class="progress-bar" style="width: 85%;"></div>
-              <!-- Imposta la larghezza in base alla percentuale -->
             </div>
             <li>Figma</li>
             <div class="progress-container">
               <div class="progress-bar" style="width: 60%;"></div>
-              <!-- Imposta la larghezza in base alla percentuale -->
             </div>
             <li>Illustrator</li>
             <div class="progress-container">
               <div class="progress-bar" style="width: 60%;"></div>
-              <!-- Imposta la larghezza in base alla percentuale -->
             </div>
             <li>Visual studio code</li>
             <div class="progress-container">
               <div class="progress-bar" style="width: 50%;"></div>
-              <!-- Imposta la larghezza in base alla percentuale -->
             </div>
             <li>Pacchetto Office</li>
             <div class="progress-container">
               <div class="progress-bar" style="width: 70%;"></div>
-              <!-- Imposta la larghezza in base alla percentuale -->
             </div>
           </ul>
 
@@ -196,7 +188,6 @@
       </section>
     </div>
 
-    <!-- Inclusione degli script di Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz4fnFO9gybZs6hCZtdly9e+Kry+I4CC6zD5b3nQw5LJtD6dX3R3RZbZQ"
       crossorigin="anonymous"></script>
@@ -208,11 +199,17 @@
   </main>
 
   <footer>
-    <div class="footer-logo">Logo</div>
+
     <div class="social-icons">
       <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+
+    <div class="social-iconsfooter">
+      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
     </div>
   </footer>
 
