--- a/index.html
+++ b/index.html
@@ -79,28 +79,33 @@
         </div>
         <div class="projects">
           <div class="project">
+            <a href="#popup0" class="open-popup">
+              <img src="assets/img/html e css.png" alt="Anteprima html e css">
+            </a>
+          </div>
+          <div class="project">
             <a href="#popup1" class="open-popup">
               <img src="assets/img/UI.png" alt="Anteprima User Interface">
             </a>
           </div>
           <div class="project">
             <a href="#popup2" class="open-popup">
-              <img src="assets/img/wireframe.png" alt="Anteprima User Interface">
+              <img src="assets/img/wireframe.png" alt="Anteprima Wireframe">
             </a>
           </div>
           <div class="project">
             <a href="#popup3" class="open-popup">
-              <img src="assets/img/grafica.png" alt="Anteprima User Interface">
+              <img src="assets/img/grafica.png" alt="Anteprima grafica">
             </a>
           </div>
           <div class="project">
             <a href="#popup4" class="open-popup">
-              <img src="assets/img/social media.png" alt="Anteprima User Interface">
+              <img src="assets/img/social media.png" alt="Anteprima social media">
             </a>
           </div>
           <div class="project">
             <a href="#popup5" class="open-popup">
-              <img src="assets/img/copy.png" alt="Anteprima User Interface">
+              <img src="assets/img/copy.png" alt="Anteprima copywriting">
             </a>
           </div>
         </div>
@@ -118,22 +123,27 @@
         <div class="projects">
           <div class="project">
             <a href="#popup6" class="open-popup">
-              <img src="assets/img/lingua disonesta.png" alt="Anteprima User Interface">
+              <img src="assets/img/lingua disonesta.png" alt="Anteprima lingua disonesta">
             </a>
           </div>
           <div class="project">
             <a href="#popup7" class="open-popup">
-              <img src="assets/img/simecom.png" alt="Anteprima User Interface">
+              <img src="assets/img/simecom.png" alt="Anteprima simecom">
             </a>
           </div>
           <div class="project">
             <a href="#popup8" class="open-popup">
-              <img src="assets/img/n3xt.png" alt="Anteprima User Interface">
+              <img src="assets/img/n3xt.png" alt="Anteprima n3xt">
             </a>
           </div>
           <div class="project">
             <a href="#popup9" class="open-popup">
-              <img src="assets/img/GeCloud.png" alt="Anteprima User Interface">
+              <img src="assets/img/GeCloud.png" alt="Anteprima gecloud">
+            </a>
+          </div>
+          <div class="project">
+            <a href="#popup9bis" class="open-popup">
+              <img src="assets/img/artedelfattoamano.png" alt="Anteprima arte del fatto a mano">
             </a>
           </div>
         </div>
@@ -149,29 +159,40 @@
         <div class="projects">
           <div class="project">
             <a href="#popup10" class="open-popup">
-              <img src="assets/img/hobby/1fotografia.JPG" alt="Anteprima User Interface">
+              <img src="assets/img/hobby/1fotografia.JPG" alt="Anteprima fotografia">
             </a>
           </div>
           <div class="project">
             <a href="#popup11" class="open-popup">
-              <img src="assets/img/hobby/2pittura.JPG" alt="Anteprima User Interface">
+              <img src="assets/img/hobby/2pittura.JPG" alt="Anteprima pittura">
             </a>
           </div>
           <div class="project">
             <a href="#popup12" class="open-popup">
-              <img src="assets/img/hobby/3escursionismo.JPG" alt="Anteprima User Interface">
+              <img src="assets/img/hobby/3escursionismo.JPG" alt="Anteprima escursionismo">
             </a>
           </div>
           <div class="project">
             <a href="#popup13" class="open-popup">
-              <img src="assets/img/hobby/4viaggi.JPG" alt="Anteprima User Interface">
+              <img src="assets/img/hobby/4viaggi.JPG" alt="Anteprima viaggi">
             </a>
           </div>
         </div>
       </div>
     </div>
 
-
+    <!-- Pop-up 0 -->
+    <div id="popup0" class="modal">
+      <div class="modal-content">
+        <span class="close-btn" onclick="history.back();">&times;</span>
+        <a href="assets/progetti/progetto html e css.pdf" target="_blank">
+          <img src="assets/img/html e css.png" alt="Progetto 1" class="modal-img">
+        </a>
+        <p class="modal-desc">Questo sito è stato realizzato per questo progetto! Grazie alle conoscenze base di HTML e CSS sarò in grado di ideare e 
+          prototipare al meglio i miei progetti di User Interface, sapendo fornire le migliori basi ai programmatori che andranno a realizzare il tutto.
+        </p>
+      </div>
+    </div>
 
     <!-- Pop-up 1 -->
     <div id="popup1" class="modal">
@@ -292,6 +313,18 @@
       </div>
     </div>
 
+    <!-- Pop-up 9bis -->
+    <div id="popup9bis" class="modal">
+      <div class="modal-content">
+        <span class="close-btn" onclick="history.back();">&times;</span>
+        <a href="https://www.youtube.com/watch?v=EsZWik65EiY" target="_blank">
+          <img src="assets/img/artedelfattoamano.png" alt="Progetto 1" class="modal-img">
+        </a>
+        <p class="modal-desc">Ideazione e realizzazione di un video che mostra la creazione di alcune bomboniere fatte a mano.
+        </p>
+      </div>
+    </div>
+
     <!-- Pop-up 10 -->
     <div id="popup10" class="modal">
       <div class="modal-content">
@@ -341,7 +374,7 @@
     <div id="popup13" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="https://www.youtube.com/watch?v=OpXRUv5VtVY" target="_blank">
+        <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank">
           <img src="assets/img/hobby/travel.jpg" alt="Progetto 1" class="modal-img">
           <img src="assets/img/hobby/travel2.jpg" alt="Progetto 1" class="modal-img">
           <img src="assets/img/hobby/travel3.jpg" alt="Progetto 1" class="modal-img">
@@ -357,11 +390,16 @@
   </main>
 
   <footer>
-    <div class="footer-logo">Logo</div>
     <div class="social-icons">
       <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+
+    <div class="social-iconsfooter">
+      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
     </div>
   </footer>
 
