--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div id="popup0" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="assets/progetti/progetto html e css.pdf" target="_blank">
+        <a href="assets/progetti/progetto html e css di Alessia Bianchi.pdf" target="_blank">
           <img src="assets/img/html e css.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Questo sito è stato realizzato per questo progetto! Grazie alle conoscenze base di HTML e CSS sarò in grado di ideare e 
