--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it" prefix="og: https://ogp.me/ns#">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="assets/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="assets/img/Alessia Bianchi2.png" />
+  <title>The Rock (1996)</title>
+  <meta property="og:title" content="Sito personale di Alessia Bianchi" />
+  <meta property="og:image" href="assets/img/Alessia Bianchi.png" />
   <title>Portfolio di Alessia</title>
 </head>
 
@@ -188,8 +191,10 @@
         <a href="assets/progetti/progetto html e css di Alessia Bianchi.pdf" target="_blank">
           <img src="assets/img/html e css.png" alt="Progetto 1" class="modal-img">
         </a>
-        <p class="modal-desc">Questo sito è stato realizzato per questo progetto! Grazie alle conoscenze base di HTML e CSS sarò in grado di ideare e 
-          prototipare al meglio i miei progetti di User Interface, sapendo fornire le migliori basi ai programmatori che andranno a realizzare il tutto.
+        <p class="modal-desc">Questo sito è stato realizzato per questo progetto! Grazie alle conoscenze base di HTML e
+          CSS sarò in grado di ideare e
+          prototipare al meglio i miei progetti di User Interface, sapendo fornire le migliori basi ai programmatori che
+          andranno a realizzare il tutto.
         </p>
       </div>
     </div>
@@ -320,7 +325,8 @@
         <a href="https://www.youtube.com/watch?v=EsZWik65EiY" target="_blank">
           <img src="assets/img/artedelfattoamano.png" alt="Progetto 1" class="modal-img">
         </a>
-        <p class="modal-desc">Ideazione e realizzazione di un video che mostra la creazione di alcune bomboniere fatte a mano.
+        <p class="modal-desc">Ideazione e realizzazione di un video che mostra la creazione di alcune bomboniere fatte a
+          mano.
         </p>
       </div>
     </div>
@@ -397,8 +403,10 @@
     </div>
 
     <div class="social-iconsfooter">
-      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i
+          class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i
+          class="fab fa-linkedin"></i></a>
       <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
     </div>
   </footer>
