--- a/contattami/index.html
+++ b/contattami/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../assets/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="assets/img/Alessia Bianchi2.png" />
     <title>Portfolio di Alessia</title>
 </head>
 
@@ -91,30 +92,33 @@
     <footer>
 
         <div class="social-icons">
-          <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
         </div>
-    
-        <div class="social-iconsfooter">
-          <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
-        </div>
-      </footer>
 
-   
+        <div class="social-iconsfooter">
+            <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i
+                    class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i
+                    class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
+        </div>
+    </footer>
+
+
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 
     <script type="text/javascript">
         (function () {
-            emailjs.init("GAlvOuUBfuRbzPQug");  
+            emailjs.init("GAlvOuUBfuRbzPQug");
         })();
     </script>
 
     <script type="text/javascript">
         document.getElementById('contact-form').addEventListener('submit', function (event) {
-            event.preventDefault(); 
+            event.preventDefault();
 
             var form = event.target;
 
