--- a/cv/index.html
+++ b/cv/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../index.css">
+  <link rel="stylesheet" href="../assets/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEJv+3p6f4g7qD0B6mH6g2OSlKjA4lx0pLzAtYd5Am4zGHFiwD62cBb1X9g6" crossorigin="anonymous">
+  <link rel="icon" type="image/png" href="assets/img/Alessia Bianchi2.png" />
   <title>Portfolio di Alessia</title>
 </head>
 
@@ -207,8 +208,10 @@
     </div>
 
     <div class="social-iconsfooter">
-      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i
+          class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i
+          class="fab fa-linkedin"></i></a>
       <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
     </div>
   </footer>
